--- a/MANIFEST.IN
+++ b/MANIFEST.IN
@@ -1,2 +1,2 @@
-recursive-include netbox_qr/templates *
-recursive-include netbox_qr/fonts *
+recursive-include templates *
+recursive-include fonts *
